--- a/Git-github-lexihi98.html
+++ b/Git-github-lexihi98.html
@@ -9,7 +9,7 @@
 <Title> Assignment 1 </Title>
 <h1> Assignment 1</h1>
 <hr>
-<h1>Who am I?</h1>
+<h2>Who am I?</h2>
 <body> 
 Hi there, my name is Lexi Hignell. I was born and raised in the Comox Valley, I quite like it here but I've definitely taken my chance to go live elsewhere on the island.
 I left home the first time and moved to Whistler at 17 years old. That only lasted three months. A couple years later was searching for employment in Victoria. I ended up getting
@@ -24,8 +24,11 @@ Although you may be able to tell, I dont have much experience at all with coding
  <body> 
      I do not know any coding languages at this point in time, but check back by the end of this course, and bet you I will! 
  </body>
- <h3> What are my expectations from this course?</h3>
+ <h2> What are my expectations from this course?</h2>
  <body> 
   What I expect to learn in this course is the basics of HTML, and how to fully understand it and be able to put it all together to create web sites. 
- </body>
+<footer>
+    Copyright &copy;2022 Lexi Hignell
+</footer>
+</body>
 </html>
